# Yuri

./: .gitignore  Cargo.toml  Readme.md  cargo.toml  dump.sql
api/: Cargo.toml
api/src/: discord_client_from_request.rs  discord_requests.rs  main.rs
api/src/models/: mod.rs  server_response.rs
api/src/scopes/: mod.rs
api/src/scopes/auth/: auth_controller.rs  controller.rs  mod.rs  models.rs  repository.rs
api/src/scopes/auth/repositories/: auth_repository.rs
api/src/scopes/commands/: controller.rs
api/src/scopes/servers/: controller.rs  models.rs  repository.rs
api/src/scopes/user/: controller.rs  mod.rs  models.rs  repository.rs  user_controller.rs
api/src/scopes/user/models/: user.rs
api/src/scopes/user/repositories/: user_repository.rs
common/: Cargo.toml  db.sql
common/src/: db_connection.rs  db_conntext.rs  lib.rs  models.rs  repositories.rs
common/src/models/: command.rs  image.rs  mod.rs  settings.rs
common/src/repositories/: command_repository.rs  guild_repository.rs  image_repository.rs  mod.rs  settings_repository.rs
discord/: Cargo.toml
discord/src/: built_in_commands.rs  commands.rs  main.rs  message_handler.rs  reply.rs
discord/src/commands/: actions.rs  reactions.rs
images/: blushes.txt  bonks.txt  cuddles.txt  handholds.txt  hugs.txt  kisses.txt  pats.txt  sad-hugs.txt  slaps.txt  spanks.txt  teases.txt
src/: action.rs  actions.rs  cute.rs  image_provider.rs  image_repository.rs  main.rs  reply.rs
src/commands/: actions.rs  reactions.rs
src/commands/actions/: normal.rs  nsfw.rs
src/commands/reactions/: normal.rs
web/: Cargo.toml  package-lock.json  package.json  vue.config.js
web/public/: index.html
web/src/: App.vue  main.rs
web/src/components/: Command.vue  CommandEditor.vue  CommandList.vue  MenuBar.vue
web/src/controllers/: home_controller.rs
web/src/models/: error.rs  home_model.rs
web/src/public/: hello.js
web/src/scopes/auth/: models.rs
web/src/scopes/auth/models/: o_auth.rs
web/src/scopes/home/: models.rs
web/src/scopes/home/controllers/: home_controller.rs
web/src/scopes/home/models/: home_model.rs
web/src/scopes/home/views/: home.html
web/src/views/: error.html  home.html
