[package]
name = "api"
version = "0.1.0"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-files = "0.5.0"
actix-session = "0.4.0"
rand = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "= 0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
common = { path = "../common" }