[package]
name = "common"
version = "1.0.0"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = ["runtime-tokio-rustls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
