[package]
name = "discord"
version = "2.0.0"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3.12"
serenity = { version = "= 0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
rand = "0.8.0"
uwuify = "0.2.2"
common = { path = "../common" }