[package]
name = "web"
version = "0.1.0"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
handlebars = { version = "3.5.2", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }